--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
         </div>
         <hr />
       </nav>
-      <h1 class="hero mb-5">Contact me</h1>
+      <h1 class="hero mb-5">Contact me 📇</h1>
     </div>
     <div class="contact-info">
       <div class="container">
