--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
       </div>
     </div>
-    <footer class="bg-light">
+    <footer class="bg-light mt-5">
       <hr />
       <h4 class="text-center">Contact me</h4>
       <div class="social-links">
