--- a/projects.html
+++ b/projects.html
@@ -67,12 +67,12 @@
       </nav>
       <h1 class="hero mb-5">My projects<br />👩🏻‍💻</h1>
     </div>
-    <h2 class="text-dark projects-main-heading text-center mb-5">
+    <h2 class="projects-main-heading text-dark text-center">
       Take a look at what I've been working on!
     </h2>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 image-column mb-5">
+        <div class="col-lg-6 image-column mb-3">
           <img
             src="images/cappadocia.png"
             alt="Cappadocia balloon tour project preview"
@@ -84,26 +84,39 @@
           <div class="project-headings">
             <h4>Cappadocia Balloon Tour Project</h4>
             <h3 class="text-dark text-muted">
-              - Built with <strong>HTML</strong>, <strong>CSS</strong> and
-              <strong>JavaScript</strong>
+              <ul>
+                <li>
+                  <a
+                    href="https://www.shecodes.io/workshops/shecodes-online-workshop-63-0/projects/328625"
+                    target="_blank"
+                    class="project-link"
+                    title="project view"
+                    >Click here </a
+                  >to view project
+                </li>
+                <li>
+                  Built with <strong>HTML</strong>, <strong>CSS</strong> and
+                  <strong>JavaScript</strong>
+                </li>
+                <li>
+                  This project was codded by Gizem Eda Varol, and it is
+                  <a
+                    href="https://github.com/gedavarol/Cappadocia-balloon-tour"
+                    target="_blank"
+                    title="cappadocia balloon tour project open source on GitHub"
+                    class="project-link"
+                    >open-sourced</a
+                  >
+                </li>
+              </ul>
             </h3>
-            <h3 class="text- dark text-muted">
-              - This project was codded by Gizem Eda Varol, and it is
-              <a
-                href="https://github.com/gedavarol/Cappadocia-balloon-tour"
-                target="_blank"
-                title="cappadocia balloon tour project open source on GitHub"
-                class="open-source"
-                >open-sourced</a
-              >
-              <br />
-            </h3>
+            <br />
           </div>
         </div>
       </div>
       <hr />
       <div class="row">
-        <div class="col-lg-6 image-column mb-5 mt-5">
+        <div class="col-lg-6 image-column mb-3 mt-3">
           <img
             src="/images/weatherapp.png"
             alt="Weather app project preview"
@@ -115,21 +128,35 @@
           <div class="project-headings">
             <h4>Weather Application Project</h4>
             <h3 class="text-dark text-muted">
-              - Built with <strong>HTML</strong>,
-              <strong>an active API</strong>, <strong>advanced CSS</strong> and
-              <strong>JavaScript</strong>
+              <ul>
+                <li>
+                  <a
+                    href="https://weatherapp-gizem.netlify.app/"
+                    target="_blank"
+                    class="project-link"
+                    title="project view"
+                    >Click here </a
+                  >to view project
+                </li>
+                <li>
+                  Built with <strong>HTML</strong>,
+                  <strong>an active API</strong>,
+                  <strong>advanced CSS</strong> and
+                  <strong>JavaScript</strong>
+                </li>
+                <li>
+                  This project was codded by Gizem Eda Varol, and it is
+                  <a
+                    href="https://github.com/gedavarol/project1-weatherapp"
+                    target="_blank"
+                    title="weather app open source on GitHub"
+                    class="project-link"
+                    >open-sourced</a
+                  >
+                </li>
+              </ul>
             </h3>
-            <h3 class="text- dark text-muted">
-              - This project was codded by Gizem Eda Varol, and it is
-              <a
-                href="https://github.com/gedavarol/project1-weatherapp"
-                target="_blank"
-                title="weather app open source on GitHub"
-                class="open-source"
-                >open-sourced</a
-              >
-              <br />
-            </h3>
+            <br />
           </div>
         </div>
       </div>
